# anki

./: pyproject.toml  readme.md
src/anki/: gamma_poison_memory.py  prototypes.py  vocabular.py  word_card.py
tests/: test_word_card.py
