[project]
name = "anki"
version = "0.1.0"
description = "Anki application for learning word."
authors = [
    {name = "newrlan",email = "nonZeroDeterminant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]
packages = [{include = 'anki', from = 'src'}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
