[project]
name = "anki"
version = "0.1.0"
description = "Anki application for learning word."
authors = [
    {name = "newrlan",email = "nonZeroDeterminant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "spacy (>=3.8.4,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]
packages = [{include = 'anki', from = 'src'}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = [
    '.', 'src'
]
